only edit left to style

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,13 +4,19 @@
 
 html {
   font-size: 62.5%;
+ 
 }
 
 body {
   
+  
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
   line-height: 1.6;
+  margin: 0px;
+  
+  
+  
 }
 
 button {
