--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -7,6 +7,8 @@ $darker-blue: #141852;
 $darkest-blue: #070b34;
 $electric: white;
 $blue-button: $darkest-purp;
+$burgondy: rgb(99, 23, 18);
+$niceBlue: #937dc5;
 //Font Size
 $font-size-large: 1.8rem;
 // Spacing
