--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,11 +1,15 @@
-@import './base/settings';
-@import './base/base';
-@import './components/login';
-@import './ususalContent/buttons';
-@import './components/header';
-@import './ususalContent/content-container';
-@import './components/filters';
-@import './ususalContent/content-container';
-@import './ususalContent/bar'
-
-
+@import "./base/settings";
+@import "./base/base";
+@import "./components/login";
+@import "./ususalContent/buttons";
+@import "./components/header";
+@import "./ususalContent/content-container";
+@import "./components/filters";
+@import "./ususalContent/content-container";
+@import "./ususalContent/bar";
+@import "./components/bloglistItems";
+@import "./components/bloglist";
+@import "./components/dashboard";
+@import "./components/expandedblog";
+@import "./components/create";
+@import "./components/blogForm";
