--- a/src/styles/components/_bloglist.scss
+++ b/src/styles/components/_bloglist.scss
@@ -15,3 +15,14 @@
   top: 23.5rem;
   border: 1px solid $darkest-blue;
 }
+
+.xbloglist__container {
+  margin: 8.15rem 0 0 85rem;
+}
+
+.xbloglist__container--secondary {
+  position: absolute;
+
+  right: 82rem;
+  top: 23.5rem;
+}
