--- a/src/styles/components/_bloglistItems.scss
+++ b/src/styles/components/_bloglistItems.scss
@@ -9,17 +9,19 @@
   border: $darkest-blue 1px solid;
 
   align-items: center;
-  height: 40rem;
+  height: 45rem;
 
   h1 {
     // padding-top: 2.5rem;
     padding: 2.5rem 3rem;
     margin: 0;
     text-align: center;
+    font-size: 150%;
   }
 
   p {
-    max-height: 8rem;
+    white-space: pre-wrap;
+    max-height: 15rem;
     overflow: hidden;
     text-align: left;
     margin: 0;
