--- a/src/styles/components/_expandedblog.scss
+++ b/src/styles/components/_expandedblog.scss
@@ -33,10 +33,11 @@
     max-width: 45rem;
 
     margin: 0 auto;
-    padding-bottom: 2rem;
+    padding-bottom: 3rem;
   }
 
   p {
+    white-space: pre-wrap;
     max-width: 55rem;
     text-align: left;
     color: white;
