--- a/src/styles/components/_filters.scss
+++ b/src/styles/components/_filters.scss
@@ -1,24 +1,21 @@
-
-
 .filters__content-container {
   min-height: 10rem;
   max-width: 30rem;
   // align-items: center;
-  background:transparentize($lightest-purp, 0.4);
+  background: transparentize($lightest-purp, 0.4);
   padding: 3rem;
-  border:$darkest-blue 1px solid;
+  border: $darkest-blue 1px solid;
   display: flex;
   flex-direction: column;
   margin: rem 0;
   & :nth-child(3) {
     margin: 2rem 0;
-   
   }
-  h2{
+  h2 {
     margin: 0;
     text-align: center;
     padding-bottom: 2rem;
-    color:white;
+    color: white;
   }
 }
 
@@ -26,17 +23,24 @@
   height: 25px;
   padding: $s-size;
   font-size: 75%;
-  font-weight: 700;
-  background: #e9d3eb;
-  color:$darkest-blue;
+  font-weight: 300;
+  background-color: rgba(72, 52, 117, 0.4);
+  color: white;
+  outline: none;
+  border: $lightest-blue 1px solid;
+}
+
+::placeholder {
+  color: white;
 }
 
 .filters__select {
   height: 25px;
-  background: #e9d3eb;
-  color: $darkest-blue;
-  font-weight: 700;
+  background-color: rgba(72, 52, 117, 0.4);
+  color: white;
+  font-weight: 300;
   font-size: 75%;
+  border-radius: 0;
+  outline: none;
+  border: $lightest-blue solid 1px;
 }
-
-
