--- a/src/styles/components/_bloglist.scss
+++ b/src/styles/components/_bloglist.scss
@@ -1,28 +1,54 @@
 .bloglist__container {
-  margin: 8.15rem 0 0 47rem;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  overflow: hidden;
+
+  @media (max-width: 710px) {
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 0rem 0;
+    align-items: center;
+  }
 }
 
-.bloglist__container--secondary {
-  position: absolute;
+.bloglist__scrollbar-removal {
+  overflow: hidden;
 
-  right: 10rem;
-  top: 23.5rem;
+  margin: 0;
+  padding: 0;
 }
 
-.bloglist__post {
-  position: absolute;
-  left: 13rem;
-  top: 23.5rem;
-  border: 1px solid $darkest-blue;
+.bloglist__blogs-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  margin-top: 5rem;
+
+  height: 100%;
+  width: 100%;
+  padding: 0 8px; /* Increase/decrease this value for cross-browser compatibility */
+  box-sizing: content-box; /* So the width will be 100% + 17px */
 }
 
-.xbloglist__container {
-  margin: 8.15rem 0 0 85rem;
-}
+.bloglist__filters-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5rem;
 
-.xbloglist__container--secondary {
-  position: absolute;
+  display: inline-block;
+  height: 50rem;
 
-  right: 82rem;
-  top: 23.5rem;
+  @media (max-width: $desktop-breakpoint) {
+    position: static;
+    // width: 32rem;
+  }
 }
