--- a/src/styles/components/_create.scss
+++ b/src/styles/components/_create.scss
@@ -1,15 +1,18 @@
 .create__container {
   height: 100vh;
 
+  width: 100vw;
+
   display: flex;
   flex-direction: column;
 }
 
 .create__header {
   flex-shrink: none;
+  width: 100%;
 }
 
 .create__remaining {
   height: 100%;
-  display: flex;
+  width: 100%;
 }
