--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,18 +1,30 @@
 .dashboard__container {
   height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
+  
 }
 dashboard__exsisting-content {
   flex-shrink: none;
+  width: 100%;
 }
 
 .dashboard__remaining-space {
   height: 100%;
   width: 100%;
+
   background-image: url("/images/body-of-water-across-sunset-1076429.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 0 -35rem;
-  overflow-y: scroll;
+  background-position: 0 0rem;
+
+  @media (max-width: $desktop-breakpoint) {
+    background-position: 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+
+    align-items: center;
+  }
 }
