--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,15 +1,8 @@
 @import "./base/settings";
 @import "./base/base";
-@import "./components/login";
 @import "./ususalContent/buttons";
-@import "./components/header";
-@import "./ususalContent/content-container";
-@import "./components/filters";
-@import "./ususalContent/content-container";
-@import "./ususalContent/bar";
-@import "./components/bloglistItems";
-@import "./components/bloglist";
-@import "./components/dashboard";
-@import "./components/expandedblog";
-@import "./components/create";
-@import "./components/blogForm";
+@import "./components/landing.scss";
+@import "./components/header.scss";
+@import "./components/search.scss";
+@import "./components/results";
+@import "./components/property";
