created api object and styles

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   display: grid;
   height: 100%;
-  background: #546277;
+  background: #c5cfdc;
 
   grid-template-columns: [first] 3fr [logo] 5fr [last-start] 3fr [end];
   grid-template-rows: [full] 100% [end];
