--- a/src/styles/components/_results.scss
+++ b/src/styles/components/_results.scss
@@ -26,7 +26,7 @@
   border: 2px solid #061951;
 
   display: grid;
-  grid-template-columns: [photos] 30vw [info] 70vw [end];
+  grid-template-columns: [info] 30vw [photo] 70vw [end];
   grid-template-rows: [body] auto [end];
 
   height: 100vh;
@@ -35,7 +35,7 @@
 //photos
 .results__modal-photos-wrapper {
   border: 1px solid darkblue;
-  grid-column: info;
+  grid-column: photo;
   grid-row: body;
   overflow-y: scroll;
   width: 70vw;
@@ -54,17 +54,22 @@
 }
 //details
 
-.results__modal-details-headers_container {
+.results__modal-details_container {
   width: 30vw;
 
-  grid-column: photos;
+  // padding: 0 2px; /* Increase/decrease this value for cross-browser compatibility */
+  // box-sizing: content-box; /* So the width will be 100% + 17px */
+
+  grid-column: info;
   grid-row: body/end;
   display: grid;
-  grid-template-rows: [title] 8rem [headBody] auto [end];
+  grid-template-rows: [title] 8rem [sub] 10rem [menu] 4rem [menuResults] 20rem [menuResultsMap]28rem[headBody] auto [end];
   grid-template-columns: [fullWidth] auto [end];
+
+  overflow-y: scroll;
 }
 .results__modal-details-title {
-  grid-row: title/headBody;
+  grid-row: title;
   grid-column: fullWidth;
   display: flex;
   justify-content: center;
@@ -78,7 +83,11 @@
   }
 }
 .results__modal-details-sub {
-  margin-top: 2rem;
+  margin-top: 1rem;
+  // border: orange solid 2px;
+  grid-row: sub;
+  grid-column: fullWidth;
+
   .price {
     font-size: 150%;
     display: inline-block;
@@ -105,9 +114,88 @@
   }
 }
 
+.results__modal-hr {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .results-modal-address {
   margin-left: 1rem;
   margin-top: 1rem;
-  line-height: 1.85;
+
+  line-height: 1.2;
   font-weight: 300;
+}
+
+.results__modal-menu {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-right: 15px;
+  margin: 10px 0;
+}
+
+.results__modal-belowButtons {
+  grid-row: menuResults;
+  grid-column: fullWidth;
+  margin-top: 2rem;
+  display: grid;
+
+  overflow-y: scroll;
+  h4 {
+    line-height: 1.5;
+    font-weight: 450;
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+.results__modal-realtor {
+  display: grid;
+
+  grid-template-rows: [margin] 10% [body] auto [endMargin] 10% [end];
+  grid-template-columns: [leftMargin] 10% [firstHalf] 40% [secondHalf] 40% [rightMargin] 10%;
+}
+.results__modal-realtor-details {
+  grid-row: body;
+  grid-column: secondHalf;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.results__modal-realtor-photo {
+  grid-row: margin/end;
+  grid-column: firstHalf;
+}
+
+.results__modal-map {
+  grid-row: menuResultsMap;
+  grid-column: fullWidth;
+}
+
+.results__neighborhood-buttons-wrapper {
+  display: inline-flex;
+
+  height: 2.5rem;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.results__neighborhood-info-box {
+  height: 15rem;
+}
+.results__neighborhood-container {
+}
+
+.results__hood-none-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  h4 {
+    font-weight: 250;
+    width: 20rem;
+  }
 }
