--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,10 @@
 @import "./components/results";
 @import "./components/property";
 @import "./components/map";
+@import "./components/resmap";
+@import "./components/detailsResults";
+@import "./components/detailsPhotos";
+@import "./components/detailsDetails";
+@import "./components/detailsHouseInfo";
+@import "./components/detailsMenu";
+@import "./components/detailsMenuResults";
