--- a/src/styles/components/_results.scss
+++ b/src/styles/components/_results.scss
@@ -32,49 +32,48 @@
 //     margin: 0 auto;
 //   }
 // }
-.results__modal-realtor {
-  display: grid;
+// .results__modal-realtor {
+//   display: grid;
 
-  grid-template-rows: [margin] 10% [body] auto [endMargin] 10% [end];
-  grid-template-columns: [leftMargin] 10% [firstHalf] 40% [secondHalf] 40% [rightMargin] 10%;
-}
-.results__modal-realtor-details {
-  grid-row: body;
-  grid-column: secondHalf;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
+//   grid-template-rows: [margin] 10% [body] auto [endMargin] 10% [end];
+//   grid-template-columns: [leftMargin] 10% [firstHalf] 40% [secondHalf] 40% [rightMargin] 10%;
+// }
+// .results__modal-realtor-details {
+//   grid-row: body;
+//   grid-column: secondHalf;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: flex-start;
+//   align-items: center;
+// }
 
-.results__modal-realtor-photo {
-  grid-row: margin/end;
-  grid-column: firstHalf;
-}
+// .results__modal-realtor-photo {
+//   grid-row: margin/end;
+//   grid-column: firstHalf;
+// }
 
-.results__neighborhood-buttons-wrapper {
-  display: inline-flex;
+// .results__neighborhood-buttons-wrapper {
+//   display: inline-flex;
 
-  height: 2.5rem;
-  width: 100%;
-  justify-content: space-evenly;
-}
+//   height: 2.5rem;
+//   width: 100%;
+//   justify-content: space-evenly;
+// }
 
-.results__neighborhood-info-box {
-  height: 15rem;
-  border: solid 1px green;
-}
-.results__neighborhood-container {
-}
+// .results__neighborhood-info-box {
+//   height: 15rem;
+// }
+// .results__neighborhood-container {
+// }
 
-.results__hood-none-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  h4 {
-    font-weight: 250;
-    width: 20rem;
-  }
-}
+// .results__hood-none-container {
+//   width: 100%;
+//   height: 100%;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   h4 {
+//     font-weight: 250;
+//     width: 20rem;
+//   }
+// }
