--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,5 @@
 @import "./components/detailsHouseInfo";
 @import "./components/detailsMenu";
 @import "./components/detailsMenuResults";
+@import "./components/interiorMap";
+@import "./components/Offenders";
