--- a/src/styles/components/_interiorMap.scss
+++ b/src/styles/components/_interiorMap.scss
@@ -16,12 +16,12 @@
   padding: 1rem;
   background: #ebf2fa;
   h4 {
-    font-size: 80%;
+    font-size: 95%;
     font-weight: 250;
     color: #061951;
   }
   h5 {
-    font-size: 70%;
+    font-size: 85%;
     margin-top: 1rem;
     margin-bottom: 1rem;
     line-height: 1.5;
@@ -29,7 +29,7 @@
     font-weight: 400;
   }
   h3 {
-    font-size: 80%;
+    font-size: 95%;
     font-weight: 300;
     color: #061951;
   }
@@ -42,7 +42,7 @@
   font-size: 100%;
 }
 #interiorMap__offender-break {
-  color: lightgray;
+  color: rgb(124, 124, 124);
   font-size: 150%;
 }
 
