--- a/src/styles/components/_resmap.scss
+++ b/src/styles/components/_resmap.scss
@@ -1,9 +1,53 @@
-.resmap__container{
-    height: 100%;
+.resmap__container {
+  height: 100%;
   width: 100vw;
   margin: 0;
 
   display: grid;
   grid-template-columns: [map] 50vw [houses] 50vw [end];
   grid-template-rows: [container] auto;
+  @media (max-width: 855px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // grid-template-columns: [fullScreen] auto;
+    // grid-template-rows: [mapRow] 50vh [resultsRow] 50vh;
+  }
+}
+
+.search__results {
+  grid-column: houses/end;
+  grid-row: container;
+  margin-top: 1rem;
+  margin-left: 1rem;
+
+  height: 100vh;
+  width: 49vw;
+  overflow-y: scroll;
+  overflow-x: hidden;
+
+  display: grid;
+  grid-gap: 0.5rem;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  @media (max-width: 855px) {
+    width: 100vw;
+    height: 42vh;
+  }
+}
+
+.search__map {
+  grid-column: map;
+  grid-row: container;
+
+  @media (max-width: 855px) {
+  }
+}
+
+.theMap__container {
+  width: 50vw;
+  height: 100vh;
+  @media (max-width: 855px) {
+    width: 100vw;
+    height: 40vh;
+  }
 }
