fixed font-size issues

--- a/src/styles/components/_detailsMenuResults.scss
+++ b/src/styles/components/_detailsMenuResults.scss
@@ -6,9 +6,9 @@
 
   overflow-y: scroll;
   h4 {
-    font-size: 120%;
+    font-size: 12px;
     line-height: 1.75;
-    font-weight: 450;
+    font-weight: 400;
     width: 90%;
     margin: 0 auto;
   }
@@ -84,7 +84,7 @@
   flex-direction: column;
   justify-content: center;
   h6 {
-    font-size: 150%;
+    font-size: 15px;
   }
 }
 .details__MenuResults-schools-span {
