--- a/src/styles/ususalContent/_buttons.scss
+++ b/src/styles/ususalContent/_buttons.scss
@@ -28,7 +28,7 @@
   background: #c5cfdc;
   padding: 9px 4px;
   width: 7rem;
-  font-size: smaller;
+  font-size: 8px;
   color: #061951;
 
   &:hover {
