--- a/src/styles/components/_detailsDetails.scss
+++ b/src/styles/components/_detailsDetails.scss
@@ -1,4 +1,3 @@
-
 .details__details-title {
   grid-row: title;
   grid-column: fullWidth;
@@ -8,7 +7,7 @@
   background: #c5cfdc;
   border-bottom: 1px lightgray solid;
   h3 {
-    font-size: 600%;
+    font-size: 75px;
     font-family: "Cormorant Garamond", serif;
     color: #061951;
   }
@@ -25,7 +24,7 @@
   margin-right: 0.5rem;
   margin-top: 0.5rem;
   button {
-    font-size: 200%;
+    font-size: 20px;
     width: 4rem;
     border: none;
   }
