--- a/src/styles/components/_detailsHouseInfo.scss
+++ b/src/styles/components/_detailsHouseInfo.scss
@@ -8,40 +8,39 @@
   align-items: center;
 
   .price {
-    font-size: 150%;
+    font-size: 32px;
     display: inline-block;
     margin-right: 3rem;
     margin-left: 1rem;
     grid-column: photo;
     @media (max-width: 1096px) {
-      font-size: 100%;
+      font-size: 25px;
     }
   }
   .num {
-    font-size: 115%;
+    font-size: 20px;
     font-weight: 300;
     @media (max-width: 1096px) {
-      font-size: 75%;
+      font-size: 15px;
     }
   }
   .break {
-    font-size: 175%;
+    font-size: 32px;
     color: lightgray;
     font-weight: 250;
     @media (max-width: 1096px) {
-      font-size: 120%;
+      font-size: 25px;
     }
   }
   .abr {
-    font-size: 100%;
+    font-size: 15px;
     @media (max-width: 1096px) {
-      font-size: 65%;
+      font-size: 12px;
     }
   }
 }
 .details__house-info-spans {
   h3 span {
-    font-size: 300%;
     @media (max-width: 1096px) {
       font-size: 250%;
     }
@@ -51,10 +50,10 @@
 .details__house-info-address {
   margin-left: 1rem;
   margin-top: 1rem;
-
+  font-size: 16px;
   line-height: 1.2;
   font-weight: 300;
   @media (max-width: 1096px) {
-    font-size: 110%;
+    font-size: 15px;
   }
 }
