--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -19,7 +19,7 @@
 .header__link {
   h1 {
     font-family: "Cormorant Garamond", serif;
-    font-size: 1000%;
+    font-size: 100px;
     font-weight: 500;
     color: #061951;
   }
